force-app/main/default/objects/Payment_Intent__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Intents</relationshipLabel>
    <relationshipName>Payment_Intents</relationshipName>
    <type>Lookup</type>
</CustomField>