force-app/main/default/objects/Payment_Intent__c/fields/First_Charge_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Charge_Date__c</fullName>
    <label>First Charge Date</label>
    <type>DateTime</type>
</CustomField>