force-app/main/default/objects/Payment_Intent__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Payment Intents</relationshipLabel>
    <relationshipName>Payment_Intents</relationshipName>
    <type>Lookup</type>
</CustomField>