force-app/main/default/objects/Payment_Intent__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipLabel>Payment Intents</relationshipLabel>
    <relationshipName>Payment_Intents</relationshipName>
    <type>Lookup</type>
</CustomField>