force-app/main/default/objects/Payment_Intent__c/fields/Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>Payment_Gateway__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payment Gateway</label>
    <referenceTo>Payment_Gateway__c</referenceTo>
    <relationshipLabel>Payment Intents</relationshipLabel>
    <relationshipName>Payment_Intents</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>