force-app/main/default/objects/Payment_Intent__c/fields/Payment_Link__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link__c</fullName>
    <formula>IF( NOT(ISBLANK(UUID__c )) , 
    ( $Label.GuestUserPaymentLink  +  UUID__c) , &quot;&quot;)</formula>
    <label>Payment Link</label>
    <type>Text</type>
</CustomField>