force-app/main/default/objects/Payment_Intent__c/fields/Payment_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Payment_Reference_Id__c</fullName>
    <displayFormat>PI{000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Payment Reference Id</label>
    <type>AutoNumber</type>
</CustomField>