force-app/main/default/objects/Payment_Intent__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>payment_new</fullName>
            </value>
            <value>
                <fullName>payment_done</fullName>
            </value>
            <value>
                <fullName>payment_expired</fullName>
            </value>
            <value>
                <fullName>payment_failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>